<resources>
    <!-- App Data -->
    <string name="app_name">Laufplan</string>
    <string name="app_logo" translatable="false">Logo</string>
    <string name="app_version" translatable="false">v.0.1</string>
    <string name="app_copyright" translatable="false">(c) Michael Schmidt 2021 - 2022\nFree Software License: AGPL
        Version 3
    </string>
    <string name="preference_file" translatable="false">de.hirola.runningplan_preferences</string>


    <string name="hello_blank_fragment">PLACEHOLDER</string>

    <!-- Titles -->
    <!-- Navigation -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_actual_running_units">Trainingsabschnitte</string>
    <string name="title_start">Start</string>
    <string name="title_training">Training</string>
    <string name="title_running_plans">Laufpläne</string>
    <string name="title_settings">Profil</string>
    <string name="title_information">Info</string>

    <!-- Dialoge -->
    <string name="title_user_settings">Nutzer</string>
    <string name="title_training_settings">Trainingsdaten</string>
    <string name="title_location">Standort</string>
    <string name="title_select_new_running_plan_options">Sie können den Plan zurücksetzen oder einen neuen Plan
        wählen.
    </string>
    <string name="select_running_plan_option_1">Reset</string>
    <string name="select_running_plan_option_2">aus Liste</string>
    <string name="select_running_plan_option_3">Nächster</string>

    <!-- Menu -->
    <string name="menu_image_alt_text">Menu</string>
    <string name="menu_item_info">Info</string>
    <string name="menu_item_license">Lizenzen / Bibliotheken</string>
    <string name="menu_item_help">Hilfe</string>
    <string name="menu_item_track">Aufzeichnungen</string>
    <string name="menu_item_logs">Fehlerlogs</string>

    <!-- Alerts -->
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Abbrechen</string>
    <string name="question">Frage</string>
    <string name="hint">Hinweis</string>
    <string name="information">Information</string>
    <string name="warning">Warnung</string>
    <string name="error">Fehler</string>
    <string name="preferences_not_set">Die Einstellungen konnten nicht gespeichert werden.</string>
    <string name="save_data_error">Die Daten konnten nicht gespeichert werden.</string>
    <string name="name_must_be_not_null">Der Name darf nicht leer sein.</string>
    <string name="no_active_running_plan">Zum Trainieren bitte einen Laufplan auswählen.</string>
    <string name="no_running_plans_available">Es sind keine Laufpläne vorhanden.</string>
    <string name="stop_active_running_plan">Soll mit diesem Laufplan wirklich nicht mehr trainiert werden?</string>
    <string name="reset_running_plan">Soll der abgeschlossene Laufplan wieder zurückgesetzt werden?</string>
    <string name="ask_for_cancel_training">Soll das Training wirklich abgebrochen werden?</string>
    <string name="error_saving_training">Das Training konnte nicht gespeichert werden.</string>
    <string name="no_file_selected">Es wurde keine Datei ausgewählt.</string>
    <string name="ask_before_delete_running_plan">Soll der Laufplan wirklich gelöscht werden?</string>
    <string name="recorded_track_not_found">Die Aufzeichnung des Trainings wurde nicht gefunden.</string>
    <string name="ask_before_clear_all_tracks">Sollen alle Tracks gelöscht werden?</string>
    <string name="ask_before_clear_all_logs">Sollen alle Logs gelöscht werden?</string>
    <string name="deleting_failed">Das Löschen ist fehlgeschlagen.</string>
    <string name="ask_before_send_log">Soll das Fehler-Log gesendet werden?</string>
    <string name="sending_failed">Das Senden ist fehlgeschlagen.</string>
    <string name="recorded_track_not_completed">Der Track konnte nicht abgeschlossen werden.</string>

    <!-- Common -->
    <string name="no_remarks">Keine Anmerkungen vorhanden.</string>
    <string name="no_content">Die Inhalte konnten nicht geladen werden.</string>
    <string name="remarks">Anmerkungen</string>
    <string name="start_date">Start-Datum</string>
    <string name="state">Status</string>
    <string name="percent">Prozent</string>
    <string name="duration">Dauer</string>
    <string name="total_durations">Gesamtdauer</string>
    <string name="total_distance">Gesamtstrecke</string>
    <string name="duration_null_hours_minutes" translatable="false">00h:00min</string>

    <!-- Location data -->
    <string name="distance">Strecke</string>
    <string name="speed">Geschwindigkeit</string>

    <!-- Actions -->
    <string name="add">Hinzufügen</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stopp</string>
    <string name="save">Speichern</string>
    <string name="reset">Zurücksetzen</string>
    <string name="import_running_plan">Importieren</string>
    <string name="select_import_file">Importdatei auswählen</string>
    <string name="loading_file_succeed">Einlesen der Datei erfolgreich</string>
    <string name="mark_as_template">als Vorlage markieren</string>
    <string name="import_failed">Der Import ist fehlgeschlagen.</string>
    <string name="import_succeed">Import erfolgreich</string>
    <string name="clear_all_tracks">Alle Tracks löschen</string>
    <string name="clear_all_logs">Alle Logs löschen</string>

    <!-- Infos -->
    <string name="banner_content_description">Laufen im Wald …</string>
    <string name="unit_state_image_content_description">Status des Laufabschnittes</string>
    <string name="running_plan_state_image_content_description">Status des Laufplanes</string>
    <string name="start_training_service">Unterstützung wurde gestartet (siehe FAQ).</string>
    <string name="training_service_ticker_text">Laufplan Unterstützungsdienst.</string>
    <string name="start_training">Start des Trainings</string>
    <string name="pause_training">Trainingspause</string>
    <string name="continue_training">Training wird fortgesetzt</string>
    <string name="cancel_training">Abbruch des Trainings</string>
    <string name="training_is_running">Training läuft</string>
    <string name="training_unit_track">Track zur Trainingseinheit</string>
    <string name="new_training_unit_starts">Neue Laufeinheit beginnt</string>
    <string name="running_unit_started_at">Laufeinheit gestartet um</string>
    <string name="training_unit_finished">Laufeinheit abgeschlossen</string>
    <string name="training_completed">Training abgeschlossen</string>
    <string name="running_plan_completed">Dieser Laufplan wurde vollständig abgeschlossen.</string>

    <!-- Tooltips -->
    <string name="template_must_be_changed">Vorlagen dürfen nicht verändert werden</string>

    <!-- User Data -->
    <string name="email_address">E-Mail-Adresse</string>
    <string name="gender">Geschlecht</string>
    <string name="birthday">Geburtstag</string>
    <string name="max_pulse">Maximale Herzfrequenz</string>
    <string name="pulse_summary">Der Maximal-Puls wird nach der Formel 220 (Männer) bzw. 226 (Frauen) - Alter
        berechnet.
    </string>

    <!-- Training Data -->
    <string name="overview_trainings">Training-Übersicht</string>
    <string name="training_of_running_plan">Training des Laufplans</string>
    <string name="training_at_date">Training am</string>
    <string name="training_day">Trainingstag</string>
    <string name="no_trainings">Noch keine Trainingsdaten vorhanden.</string>

    <!-- Movement Data -->
    <string name="movement_type_not_found">Unbekannt</string>
    <string name="P">Pause</string>
    <string name="EL">Einlaufen</string>
    <string name="LG">Langsames Gehen</string>
    <string name="ZG">Zügiges Gehen</string>
    <string name="LL">Langsames Laufen</string>
    <string name="FL">Flottes Laufen</string>
    <string name="SL">Schnelles Laufen</string>
    <string name="SSL">Sehr schnelles Laufen</string>
    <string name="LDL">Langsamer Dauerlauf</string>
    <string name="ZDL">Zügiger Dauerlauf</string>
    <string name="L">Laufen</string>
    <string name="R">Rennen</string>
    <string name="movement_type_summary">Arten der Bewegung während des Lauftrainings</string>

    <!-- Location Data -->
    <string name="use_location_data">Standort-Daten nutzen</string>

    <!-- Running Plans -->
    <string name="running_plan">Laufplan</string>
    <string name="running_plan_name">Laufplan-Name</string>
    <string name="actual_running_plan">Aktueller Laufplan</string>
    <string name="select_training_date">Trainingstag wählen</string>
    <string name="total_time">Gesamtdauer</string>
    <string name="unit_time">Dauer Laufeinheit</string>
    <string name="running_unit">Laufabschnitt</string>
    <string name="show_training_details">Trainingdetails anzeigen …</string>
    <string name="select_as_active_running_plan">Als aktiven Plan auswählen</string>
    <string name="select_week_of_start">Startwoche festlegen</string>
    <string name="running_plan_start_remarks">Laufplan zum Einstieg in das Laufen</string>
    <string name="running_plan_start_60_remarks">Fortsetzung des Laufplans Start</string>
    <string name="running_plan_start_90_remarks">Fortsetzung des Laufplans Start 60</string>
    <string name="running_plan_start_test_remarks">Laufplan für Tests</string>

    <!-- Preferences -->
    <string name="preference_not_found">Unbekannte Einstellung</string>
    <string name="other_settings">Weitere Einstellungen</string>
    <string name="debugging">Fehlerbehebung</string>
    <string name="debug_mode">Debug-Modus</string>
    <string name="send_debug_log">Fehler-Log versenden</string>
    <string name="gender_undefined">undefiniert</string>
    <string name="gender_diverse">divers</string>
    <string name="gender_male">männlich</string>
    <string name="gender_female">divers</string>
    <string name="save_trainings">Trainings speichern</string>
    <string name="user_training_level">Trainingslevel</string>
    <string name="training_beginner">Anfänger</string>
    <string name="training_amateur">Amateur</string>
    <string name="training_profi">Profi</string>
    <string name="use_sync">Daten synchronisieren</string>
    <string name="hide_templates">Vorlagen ausblenden</string>
    <string name="notifications">Benachrichtigungen</string>

    <!-- Summaries for preferences -->
    <string name="use_locations_summary_on">Läufe können aufgezeichnet werden (Strecke, Geschwindigkeit).</string>
    <string name="use_locations_summary_off">Läufe werden nicht aufgezeichnet.</string>
    <string name="save_trainings_summary_on">Trainingsdaten mit aufgezeichneten Tracks werden gespeichert.</string>
    <string name="save_trainings_summary_off">Trainingsdaten werden nicht gespeichert.</string>
    <string name="hide_templates_summary_on">Nur eigene Laufpläne werden angezeigt.</string>
    <string name="hide_templates_summary_off">Alle Laufpläne werden angezeigt.</string>
    <string name="enable_notifications_summary_on">Benachrichtigungen werden angezeigt.</string>
    <string name="enable_notifications_summary_off">Es werden keine Benachrichtigungen angezeigt.</string>
    <string name="enable_sync_summary_on">Daten werden synchronisiert. Steht erst in der nächsten Version zur Verfügung.</string>
    <string name="enable_sync_summary_off">Es werden keine Daten synchronisiert.</string>
    <string name="enable_debug_mode_summary_on">Es werden Logs erzeugt. Hilfreich für die Fehlersuche. Steht erst in der nächsten Version zur Verfügung.</string>
    <string name="enable_debug_mode_summary_off">Es werden keine Logs erzeugt.</string>
    <string name="send_debug_logs_summary_on">Fehler können gemeldet werden.</string>
    <string name="send_debug_logs_summary_off">Fehler können nicht gemeldet werden.</string>

</resources>