<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/title_user">

        <EditTextPreference
                app:key="user_email_address"
                app:title="@string/email_address"
                app:useSimpleSummaryProvider="true"/>

        <ListPreference
                app:key="user_gender"
                app:title="@string/gender"
                app:entries="@array/gender_entries"
                app:entryValues="@array/gender_values"
                app:defaultValue="0"
                app:useSimpleSummaryProvider="true"/>

        <de.hirola.runningplan.ui.settings.DatePreference
                app:key="user_birthday"
                app:title="@string/birthday"
                app:defaultValue="19971-07-11"
                app:iconSpaceReserved="false"/>

        <EditTextPreference
                app:key="user_max_pulse"
                app:title="@string/max_pulse"
                app:summary="@string/pulse_summary"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>