<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_start"
            android:icon="@drawable/ic_start_black_24dp"
            android:title="@string/title_start"/>

    <item
            android:id="@+id/navigation_training"
            android:icon="@drawable/ic_training_black_24dp"
            android:title="@string/title_training"/>

    <item
            android:id="@+id/navigation_running_plans"
            android:icon="@drawable/ic_running_plans_black_24dp"
            android:title="@string/title_running_plans"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings"/>

    <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_info"/>

</menu>