<?xml version="1.0" encoding="utf-8"?>
<!--copyright>
Copyright 2021 by Michael Schmidt, Hirola Consulting
This software us licensed under the AGPL-3.0 or later.
</copyright-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


    <ImageView
            android:id="@+id/fgmt_info_content_app_logo_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/runningplan40x40"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/fgmt_info_content_app_name_textview"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_logo"/>
    <TextView
            android:id="@+id/fgmt_info_content_app_name_textview"
            android:layout_height="0dp"
            android:inputType="none"
            android:text="@string/app_name"
            android:importantForAutofill="no"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/fgmt_info_content_app_logo_imageview"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fgmt_info_content_app_logo_imageview"/>

    <TextView
            android:inputType="none"
            android:text="@string/app_version"
            android:importantForAutofill="no"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/fgmt_info_content_app_logo_imageview"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fgmt_info_content_app_name_textview"
            android:layout_marginStart="20dp"/>

    <TextView
            android:id="@+id/fgmt_info_content_app_copyright_textview"
            android:inputType="none"
            android:text="@string/app_copyright"
            android:importantForAutofill="no"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/fgmt_info_content_app_name_textview"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/fgmt_info_content_app_name_textview"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fgmt_info_content_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/fgmt_info_content_app_copyright_textview"
            android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>