<?xml version="1.0" encoding="utf-8"?>
<!--copyright>
Copyright 2021 by Michael Schmidt, Hirola Consulting
This software us licensed under the AGPL-3.0 or later.

A view to import (add) running plans from template.

@author Michael Schmidt (Hirola)
@since 1.1.1
</copyright-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
            android:id="@+id/label_running_plan_name_fragment_add_running_plan"
            android:layout_width="152dp"
            android:layout_height="44dp"
            android:inputType="none"
            android:text="@string/running_plan_name"
            android:importantForAutofill="no"
            android:labelFor="@id/edittext_running_plan_name_fragment_add_running_plan"
            android:ems="10"
            android:clickable="false"
            android:focusable="false"
            android:minHeight="48dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp" android:layout_marginStart="10dp"/>

    <EditText
            android:id="@+id/edittext_running_plan_name_fragment_add_running_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/label_running_plan_name_fragment_add_running_plan"
            android:layout_marginStart="5dp" android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>
    <EditText
            android:id="@+id/label_running_plan_remarks_fragment_add_running_plan"
            android:layout_width="368dp"
            android:layout_height="46dp"
            android:inputType="none"
            android:text="@string/remarks"
            android:ems="10"
            android:clickable="false"
            android:focusable="false"
            android:minHeight="48dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/edittext_running_plan_name_fragment_add_running_plan"
            app:layout_constraintTop_toBottomOf="@+id/edittext_running_plan_name_fragment_add_running_plan"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/label_running_plan_name_fragment_add_running_plan"/>
    <EditText
            android:id="@+id/edittext_running_plan_remarks_fragment_add_running_plan"
            android:layout_width="362dp"
            android:layout_height="216dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            app:layout_constraintStart_toStartOf="@+id/label_running_plan_remarks_fragment_add_running_plan"
            app:layout_constraintTop_toBottomOf="@+id/label_running_plan_remarks_fragment_add_running_plan"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/label_running_plan_remarks_fragment_add_running_plan"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/button_select_import_fragment_add_running_plan"
            android:text="@string/select_import_file"
            android:layout_height="43dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edittext_running_plan_remarks_fragment_add_running_plan"
            app:layout_constraintStart_toStartOf="@+id/edittext_running_plan_remarks_fragment_add_running_plan"/>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat_fragment_add_running_plan"
            android:text="@string/mark_as_template"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/label_file_name_fragment_add_running_plan"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/label_file_name_fragment_add_running_plan"/>

    <TextView
            android:id="@+id/label_file_name_fragment_add_running_plan"
            android:text=""
            android:inputType="none"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:ems="10"
            android:clickable="false"
            android:focusable="false"
            android:minHeight="48dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/button_select_import_fragment_add_running_plan"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/button_select_import_fragment_add_running_plan"
            app:layout_constraintEnd_toEndOf="@+id/edittext_running_plan_remarks_fragment_add_running_plan"/>

    <Button
            android:id="@+id/button_import_fragment_add_running_plan"
            android:text="@string/import_running_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/switch_compat_fragment_add_running_plan"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/switch_compat_fragment_add_running_plan"
            android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>