<?xml version="1.0" encoding="utf-8"?>
<!--copyright>
Copyright 2021 by Michael Schmidt, Hirola Consulting
This software us licensed under the AGPL-3.0 or later.

A row view to show running plan details in list.

@author Michael Schmidt (Hirola)
@since 0.1
</copyright-->
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/running_plan_row_menu_item_imageview"
            app:srcCompat="@drawable/unused20x20"
            android:contentDescription="@string/state"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"/>

    <TextView
            android:id="@+id/track_row_name_label"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:ems="10"
            android:clickable="false"
            android:focusable="false"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toEndOf="@+id/running_plan_row_menu_item_imageview"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/running_plan_row_running_entry_units_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="@+id/track_row_name_label"
            app:layout_constraintStart_toStartOf="@+id/running_plan_row_menu_item_imageview"
            app:layout_constraintTop_toBottomOf="@+id/track_row_name_label"
            android:layout_marginTop="5dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/running_plan_row_running_entry_units_textview"
            app:layout_constraintStart_toStartOf="@+id/running_plan_row_running_entry_units_textview"
            app:layout_constraintEnd_toEndOf="@+id/running_plan_row_running_entry_units_textview">

        <!--- Startdatum-->
        <ImageView
                app:srcCompat="@drawable/baseline_calendar_today_black_24"
                android:contentDescription="@string/start_date"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/track_row_start_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <!--- Dauer des gesamten Plans-->
        <ImageView
                app:srcCompat="@drawable/baseline_schedule_black_24"
                android:contentDescription="@string/duration"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/track_row_stop_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <!--- bereits durchgeführter Anteil in Prozent-->
        <ImageView
                app:srcCompat="@drawable/baseline_percent_black_24"
                android:contentDescription="@string/percent"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/track_row_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>