<?xml version="1.0" encoding="utf-8"?>
<!--copyright>
Copyright 2021 by Michael Schmidt, Hirola Consulting
This software us licensed under the AGPL-3.0 or later.

A row view to show running plan details in list.

@author Michael Schmidt (Hirola)
@since 1.1.1
</copyright-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <!--- Name des Laufplans -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--- Status des Laufplans, abgeschlossen, aktueller Plan, unvollständig-->
        <ImageView
                android:id="@+id/runningplan_row_state_imageview"
                app:srcCompat="@drawable/unused20x20"
                android:contentDescription="@string/state"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <!--- Name des Laufplans-->
        <TextView
                android:id="@+id/runningplan_row_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    </LinearLayout>

    <!--- Beschreibung des Laufplans-->
    <TextView
            android:id="@+id/runningplan_row_remarks_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <!--- Details des Laufplans-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!--- Startdatum-->
        <ImageView
                android:id="@+id/runningplan_row_startdate_imageview"
                app:srcCompat="@drawable/baseline_calendar_today_black_24"
                android:contentDescription="@string/startdate"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/runningplan_row_startdate_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <!--- Dauer des gesamten Plans-->
        <ImageView
                android:id="@+id/runningplan_row_duration_imageView"
                app:srcCompat="@drawable/baseline_schedule_black_24"
                android:contentDescription="@string/duration"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/runningplan_row_duration_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <!--- bereits durchgeführter Anteil in Prozent-->
        <ImageView
                android:id="@+id/runningplan_row_completed_imageview"
                app:srcCompat="@drawable/baseline_percent_black_24"
                android:contentDescription="@string/percent"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/runningplan_row_percentcompleted_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>
    <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:barrierDirection="left" android:layout_weight="2"/>

</LinearLayout>